Review this commit

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,2 +1,5 @@
 $primary-color: #E02B57; 
 $secondary-color: rgba($primary-color, 0.7);
+$soft-pink: #FFEAEA;
+$light-grey: rgba(#D6D6D6, 0.7);
+$white: #FFFFFF;
