--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,3 +3,4 @@ $secondary-color: rgba($primary-color, 0.7);
 $soft-pink: #FFEAEA;
 $light-grey: rgba(#D6D6D6, 0.7);
 $white: #FFFFFF;
+$black: #000000;
