Fix button padding

--- a/client/src/components/atoms/button.scss
+++ b/client/src/components/atoms/button.scss
@@ -5,14 +5,13 @@
     background-color: $secondary-color;
     border: none;
     border-radius: 10px;
-    box-sizing: border-box;
     color: $soft-pink;
     display: flex;
     justify-content: center;
     height: 100%;
     max-width: 327px;
     max-height: 34px;
-    padding: 10px 0px 10px 0px; 
+    padding: 10px 0px;
     width: 100%;
     
     font-family: Saira;
