--- a/client/src/components/atoms/menu-button.scss
+++ b/client/src/components/atoms/menu-button.scss
@@ -24,7 +24,7 @@
     }
 
     &__description {
-        color: $black;
+        color: $white;
         margin-top: 7px;
         font-size: 13px;
     }
