--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
-@import 'reset-css';
 
-.App {
-  text-align: center;
+body, html {
+  box-sizing: border-box;
+  font-family: Saira;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
