--- a/client/src/components/atoms/input.scss
+++ b/client/src/components/atoms/input.scss
@@ -20,7 +20,8 @@
         border: none;
         height: 100%;
         max-height: 45px;
-        max-width: 321px;
+        max-width: 700px;
+        box-sizing: border-box;
         padding: 10px 10px;
         width: 100%;
     }
