Add styles to AnonymousTemplate

--- a/client/src/components/templates/anonymous-template.scss
+++ b/client/src/components/templates/anonymous-template.scss
@@ -1,4 +1,15 @@
-.logged-in-template {
-    display: flex;
-    align-items: center;
+.anonymous-template {
+    &__body{
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .anonymous-template{
+        &__body {
+            align-items: center;
+        }
+    }
 }
